Fix hero height on mobile devices

--- a/src/styles/components/_hero.sass
+++ b/src/styles/components/_hero.sass
@@ -12,6 +12,7 @@ $aspect_ratio: calc($video_src_width / $video_src_height)
 
 .hero
     height: 100vh
+    height: 100dvh
     &__content
         height: 100%
         display: grid
